# langchain_agents

./: README.md  pyproject.toml
app/: main.py  models.py
app/agents/analyst/: agent.py  config.py  dependencies.py  models.py  prompts.py  repository.py  router.py  schemas.py  service.py  tools.py
app/agents/tactician/: schemas.py
app/core/: middleware.py  settings.py
app/data/: england_matches.json  england_players.json
app/football/: client.py  models.py
docs/: planning.md
tests/: conftest.py  test_db.py
